--- a/Home.html
+++ b/Home.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -146,7 +145,7 @@
     <a href="#">Academic</a>
     <a href="#">Blogs</a>
     <a href="#">Gallery</a>
-    <a href="#">👤 Sign In</a>
+    <a href="signin.html">👤 Sign In</a> <!-- 👈 Updated this line -->
   </nav>
 </header>
 
